--- a/src/styles/task-button.css
+++ b/src/styles/task-button.css
@@ -1,43 +1,43 @@
 .add-task-button {
-   position: fixed;
-   bottom: 2rem;
-   left: 2.5rem;
-   background-color: var(--blueColor);
-   z-index: 100;
+    position: fixed;
+    bottom: 2rem;
+    left: 2.5rem;
+    background-color: var(--blueColor);
+    z-index: 2;
 
-   color: black;
-   padding: 1rem;
-   padding-left: 1.5rem;
-   border: none;
-   border-radius: 1rem;
-   cursor: pointer;
+    color: var(--lightColor);
+    padding: 1rem;
+    padding-left: 1.5rem;
+    border: none;
+    border-radius: 1rem;
+    cursor: pointer;
 
-   transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
 
-   display: flex;
-   gap: 0.5rem;
-   justify-content: space-between;
-   align-items: center;
+    display: flex;
+    gap: 0.5rem;
+    justify-content: space-between;
+    align-items: center;
 
-   margin-bottom: 0.5rem;
+    margin-bottom: 0.5rem;
 }
 
 .add-task-button:hover {
-   background-color: #00d7e2;
-   transform: scale(1.05);
+    background-color: #008990;
+    transform: scale(1.05);
 }
 
 .add-task-button--plus-icon {
-   height: 2.5rem;
-   width: 2.5rem;
+    height: 2.5rem;
+    width: 2.5rem;
 }
 
 .add-task-button--plus-icon > svg {
-   fill: black;
-   transform: translate(0rem -0.4rem);
+    fill: var(--lightColor);
+    transform: translate(0rem -0.4rem);
 }
 
 .add-task-button--text {
-   font-size: 1.3rem;
-   font-weight: bold;
+    font-size: 1.3rem;
+    font-weight: bold;
 }
