--- a/src/styles/tasks.css
+++ b/src/styles/tasks.css
@@ -17,19 +17,20 @@
 .task-container {
     display: flex;
     flex-direction: column;
-    gap: 1.5rem;
+    gap: 0.3rem;
 }
 
 .task {
     display: flex;
     align-items: flex-start;
-    gap: 0.8rem;
+    gap: 0.4rem;
 }
 
 .checkbox {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top: 0.4rem;
 
     width: 1.4rem;
     aspect-ratio: 1;
@@ -57,17 +58,71 @@
     opacity: 1;
 }
 
+.task-elements {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    width: 100%;
+    border-bottom: 1px solid hsl(215, 12%, 31%);
+    padding-bottom: 0.3rem;
+}
+
 .task-content {
     display: flex;
     flex-direction: column;
+    gap: 0.2rem;
+    padding: 0.2rem 0.2rem;
+    width: 100%;
+}
+
+.task-content:hover {
+    background-color: hsl(214, 15%, 25%);
+    box-shadow: 0px 2px 3px 3px rgba(0, 0, 0, 0.2);
+    border-radius: 0.5rem;
 }
 
 .task-title {
-    font-size: 1.2rem;
-    font-weight: bold;
+    font-size: 1.3rem;
+    margin-left: 0.3rem;
 }
 
 .task-description {
-    font-size: 1rem;
+    font-size: 0.9rem;
+    margin-left: 0.3rem;
     color: var(--secondaryColor);
+}
+
+.task-due-date {
+    display: flex;
+    align-items: center;
+}
+
+.task-calendar-icon-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.calendar-icon {
+    margin-top: 0.1rem;
+    height: 1.2rem;
+    aspect-ratio: 1;
+}
+
+.task-details-container {
+    display: flex;
+    gap: 2rem;
+}
+
+.delete-icon-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    height: 100%;
+    margin-right: 0.5rem;
+}
+
+.delete-icon:hover {
+    fill: var(--redColor);
 }
