--- a/src/styles/task-dialog.css
+++ b/src/styles/task-dialog.css
@@ -1,4 +1,4 @@
-.dialog {
+.task-dialog {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -17,7 +17,7 @@
     box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.2);
 }
 
-.dialog-wrapper {
+.task-dialog-wrapper {
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
