--- a/src/styles/project-dialog.css
+++ b/src/styles/project-dialog.css
@@ -3,4 +3,43 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+
+    padding: 1rem;
+    border: none;
+    border-radius: 0.5rem;
+    background-color: var(--sidebarColor);
+
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+
+.project-dialog:not([open]) {
+    display: none;
+}
+
+.project-name-input {
+    color: white;
+}
+
+.project-dialog-btn-container {
+    display: flex;
+    gap: 0.5rem;
+    justify-content: flex-end;
+}
+
+.project-dialog-btn-container > button {
+    padding: 0.5rem;
+    border: none;
+    border-radius: 0.2rem;
+    color: white;
+    cursor: pointer;
+}
+
+.project-input-cancel-btn {
+    background-color: var(--redColor);
+}
+
+.project-input-submit-btn {
+    background-color: var(--greenColor);
 }
