--- a/src/styles/tasks.css
+++ b/src/styles/tasks.css
@@ -122,6 +122,10 @@
     margin-right: 0.5rem;
 }
 
+.delete-icon {
+    transition: fill 0.1s ease-in-out;
+}
+
 .delete-icon:hover {
     fill: var(--redColor);
 }
