added priority task colors and fixed delete task bugs

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,6 +14,7 @@
     --lightColor: #eeeeee;
     --greenColor: #01965a;
     --redColor: #ef5132;
+    --yellowColor: #e8c527;
     --sidebarHoverColor: rgba(32, 35, 40, 0.3);
 }
 
