added project filtering and task completion handling

--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -72,6 +72,7 @@
     margin-bottom: 5vh;
 }
 
+.sidebar-tasks-section--all-tasks-icon > svg,
 .sidebar-tasks-section--today-sun-icon > svg,
 .sidebar-tasks-section--completed-check-icon > svg {
     width: 1.5rem;
