--- a/src/styles/task-dialog.css
+++ b/src/styles/task-dialog.css
@@ -40,7 +40,7 @@
 }
 
 .dialog-add-task-btn {
-    background-color: var(--blueColor);
+    background-color: var(--greenColor);
 }
 
 .dialog-close-dialog-btn {
