--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -5,14 +5,18 @@
     position: sticky;
     overflow: hidden;
 
-    padding: 1rem;
+    padding: 2rem 1.2rem;
 
     background-color: var(--sidebarColor);
+
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0.5rem 0 1rem 0.5rem rgba(0, 0, 0, 0.15);
 }
 
 .sidebar-top {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     margin-bottom: 5vh;
 }
@@ -32,6 +36,7 @@
 
 .sidebar-section-container {
     display: flex;
+    flex: 1;
     flex-direction: column;
 }
 
@@ -47,6 +52,13 @@
     padding: 1rem;
 
     font-size: 1.1rem;
+
+    transition: all 0.2s ease-in-out;
+}
+
+.sidebar-page:hover,
+.sidebar-page.active {
+    background-color: var(--sidebarHoverColor);
 }
 
 .sidebar-tasks--page-label {
@@ -54,10 +66,6 @@
     gap: 0.5rem;
     align-items: center;
     transform: translate(-1rem, 0rem);
-}
-
-.sidebar-page:hover {
-    background-color: var(--sidebarHoverColor);
 }
 
 .sidebar-tasks-section--task-page-container {
@@ -109,10 +117,10 @@
 .sidebar-projects-section--add-project-button-plus-icon {
     width: 2.5rem;
     height: 2.5rem;
+    transition: all 0.2s ease-in-out;
 }
 
 .sidebar-projects-section--add-project-button-plus-icon > svg {
-    /* fill: var(--blueColor); */
     fill: var(--lightColor);
 }
 
@@ -124,6 +132,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    transition: all 0.2s ease-in-out;
 }
 
 .project-delete-icon-container > svg {
@@ -142,4 +152,11 @@
 
 .sidebar-projects-section--project-page:hover .project-delete-icon-container {
     opacity: 1;
+}
+
+.sidebar-tasks-section--all-tasks-page.active,
+.sidebar-tasks-section--today-page.active,
+.sidebar-tasks-section--completed-page.active,
+.sidebar-projects-section--project-page.active {
+    background-color: var(--sidebarHoverColor);
 }
